expected/main/mil/bad-type-signatures.err
ERROR: "actual/main/mil/bad-type-signatures.mil", line 7
g[x] = bnot((x))
^
Declared type "forall (a :: *). [a] >>= [a]" for "g" is more general than inferred type "[Flag] >>= [Flag]"

ERROR: "actual/main/mil/bad-type-signatures.mil", line 4
f[x] = add((x, 1))
^
Declared type "forall (a :: *). [a] >>= [a]" for "f" is more general than inferred type "[Word] >>= [Word]"

ERROR: Aborting after 2 previously reported errors

